--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -13,9 +13,9 @@
 
 // LAYOUT
 @import "./layout/header";
-@import "./layout/main";
 @import "./layout/footer";
 
 // PAGES
-@import "./pages/contact";
 @import "./pages/home";
+@import "./pages/options";
+@import "./pages/game";
