--- a/src/styles/pages/_options.scss
+++ b/src/styles/pages/_options.scss
@@ -1,9 +1,9 @@
-.home {
+.options {
   @include outline;
   @include box(100vw, 76vh);
   @include flex(flex, column, center, center, nowrap);
 }
 
-.home.hidden {
+.options.hidden {
   display: none;
 }
