feat_js-btns-added

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -39,6 +39,10 @@ p, h1, h2, h3, h4, h5, h6 {
   font-weight: 100;
 }
 
+.hidden {
+  display: none;
+}
+
 @font-face {
   src: url(../assets/fonts/fontname.ttf);
   font-family: "font-primary";
