--- a/src/styles/pages/_home.scss
+++ b/src/styles/pages/_home.scss
@@ -1,9 +1,11 @@
-.home {
-  @include outline;
-  @include box(100vw, 76vh);
-  @include flex(flex, column, center, center, nowrap);
+.header__home {
+  
 }
 
-.home.hidden {
-  display: none;
+.main__home {
+
+}
+
+.footer__home {
+
 }
