--- a/src/styles/components/_visibility.scss
+++ b/src/styles/components/_visibility.scss
@@ -2,11 +2,11 @@ header h2 {
   display: none;
 }
 
-main div {
+main section {
   display: none;
 }
 
-footer div {
+footer section {
   display: none;
 }
 
