--- a/src/styles/main.scss
+++ b/src/styles/main.scss
@@ -2,6 +2,7 @@
 @import "./abstracts/mixins";
 @import "./abstracts/variables";
 @import "./abstracts/media-query";
+@import "./abstracts//visibility";
 
 // BASE
 @import "./base/colors";
@@ -10,7 +11,6 @@
 
 // COMPONENTS
 @import "./components/buttons";
-@import "./components/visibility";
 
 // LAYOUT
 @import "./layout/header";
