--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -70,7 +70,7 @@ p, h1, h2, h3, h4, h5, h6 {
 header {
   outline: 1px dashed green;
   width: 100vw;
-  height: 12vh;
+  height: 10vh;
   display: flex;
   flex-direction: row;
   justify-content: center;
@@ -92,7 +92,7 @@ footer {
 main {
   outline: 1px dashed green;
   width: 100vw;
-  height: 76vh;
+  height: 78vh;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -100,7 +100,56 @@ main {
   flex-wrap: nowrap;
 }
 
+.main__home {
+  width: 100vw;
+  height: 78vh;
+  flex-direction: column;
+  justify-content: space-evenly;
+  align-items: center;
+}
+.main__home .logo__cont {
+  outline: 1px dashed green;
+  width: 100vw;
+  height: auto;
+}
+.main__home .logo__cont img {
+  width: 20rem;
+  height: auto;
+  margin: 0 auto;
+}
+.main__home .language__cont {
+  outline: 1px dashed green;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+.main__home .language__cont .title__cont {
+  width: 100vw;
+  text-align: center;
+}
+.main__home .language__cont .flags__cont {
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+}
+.main__home .language__cont .flags__cont .flag__cont {
+  outline: 1px dashed green;
+  width: 30vw;
+  height: auto;
+}
+.main__home .language__cont .flags__cont .flag__cont img {
+  width: 4rem;
+  height: auto;
+  margin: 0 auto;
+}
+
 .main__options {
+  width: 100vw;
+  height: 78vh;
   flex-direction: column;
   justify-content: center;
   align-items: center;
