--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -12,6 +12,10 @@ body {
   -webkit-font-smoothing: antialiased;
   scroll-behavior: smooth;
   overflow-x: hidden;
+  background-image: url('../../assets/imgs/table-blue.jpg');
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
 }
 
 ol, ul {
