--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -32,12 +32,15 @@ footer section {
 body {
   font-size: 15px;
   line-height: 1.2;
-  color: white;
   -webkit-font-smoothing: antialiased;
   scroll-behavior: smooth;
   overflow-x: hidden;
-  background-image: url('../assets/imgs/table-green.jpg');
+  background-color: lavender;
+  /* background-image: url("../../assets/imgs/table-green.jpg");
   background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  */
 }
 
 ol, ul {
