--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -19,6 +19,10 @@ footer section {
   display: flex;
 }
 
+.hidden {
+  visibility: hidden;
+}
+
 * {
   box-sizing: border-box;
   margin: 0;
@@ -70,6 +74,19 @@ p, h1, h2, h3, h4, h5, h6 {
   src: url(../assets/fonts/fontname.ttf);
   font-family: "font-secondary";
 }
+.popup__congrats {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: nowrap;
+  background-color: bisque;
+  position: fixed;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+}
+
 header {
   outline: 1px dashed green;
   width: 100vw;
