style_button-skin-added

--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -74,6 +74,24 @@ p, h1, h2, h3, h4, h5, h6 {
   src: url(../assets/fonts/fontname.ttf);
   font-family: "font-secondary";
 }
+button {
+  width: 6rem;
+  height: 2.5rem;
+  cursor: pointer;
+  outline: none;
+  border: 0.08rem solid black;
+  text-align: center;
+  font-weight: bold;
+  transition: all 0.2s ease;
+  position: relative;
+  border-radius: 0.2rem;
+}
+
+button:hover {
+  background-color: #112166;
+  color: #fff;
+}
+
 .popup__congrats {
   display: flex;
   flex-direction: column;
