--- a/src/styles/base/_typography.scss
+++ b/src/styles/base/_typography.scss
@@ -1,6 +1,6 @@
 $font-primary: "../assets/fonts";
 @font-face {
-  src: url(#{$font-primary}/fontname.ttf);
+  src: url(#{$font-primary}/bubblegum.ttf);
   font-family: 'font-primary';
 }
 
