style_characters-font-family-added&used

--- a/src/styles/base/_reset.scss
+++ b/src/styles/base/_reset.scss
@@ -7,7 +7,8 @@
 }
 
 body {
-  font-size: 15px;
+  font-size: 13px;
+  font-family: 'font-secondary';
   line-height: 1.2;
   -webkit-font-smoothing: antialiased;
   scroll-behavior: smooth;
