--- a/src/styles/components/_buttons.scss
+++ b/src/styles/components/_buttons.scss
@@ -9,6 +9,7 @@ button {
   position: relative;
   border-radius: 0.2rem;
   font-family: 'font-primary';
+  font-size: 1.2rem;
 }
 button:hover {
   background-color: #112166;
