--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -34,7 +34,8 @@ footer section {
 }
 
 body {
-  font-size: 15px;
+  font-size: 13px;
+  font-family: "font-secondary";
   line-height: 1.2;
   -webkit-font-smoothing: antialiased;
   scroll-behavior: smooth;
@@ -71,7 +72,7 @@ p, h1, h2, h3, h4, h5, h6 {
   font-family: "font-primary";
 }
 @font-face {
-  src: url(../assets/fonts/fontname.ttf);
+  src: url(../assets/fonts/characters.ttf);
   font-family: "font-secondary";
 }
 button {
@@ -85,6 +86,7 @@ button {
   position: relative;
   border-radius: 0.2rem;
   font-family: "font-primary";
+  font-size: 1.2rem;
 }
 
 button:hover {
